feat: expose a search function for application service